Fix spacing between divs on open menu and user signups

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -231,6 +231,10 @@ select {
   width: 260px;
 }
 
+.yourSignups {
+  height: 300px;
+}
+
 .openSignupInfo,
 .yourSignupInfo,
 .dishesRow,
